0.6.10/_sources/gettingstarted/examples/gallery/auto_examples_processing/filtering/plot_filter.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_processing/filtering/plot_filter.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_processing_filtering_plot_filter.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_processing_filtering_plot_filter.py:


Savitky-Golay and Whittaker-Eilers smoothing of a Raman spectrum
================================================================
In this example, we use the `Filter` processor to smooth a Raman spectrum.

.. GENERATED FROM PYTHON SOURCE LINES 14-17

.. code-block:: default


    import spectrochempy as scp








.. GENERATED FROM PYTHON SOURCE LINES 18-19

First, we import a sample raman spectrum and plot it:

.. GENERATED FROM PYTHON SOURCE LINES 19-28

.. code-block:: default


    # use the generic read function.
    # Note that read_labspec would be equivalent for this file format.

    X = scp.read("ramandata/labspec/SMC1-Initial_RT.txt")
    prefs = X.preferences
    prefs.figure.figsize = (8, 4)
    _ = X.plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_processing/filtering/images/sphx_glr_plot_filter_001.png
   :alt: plot filter
   :srcset: /gettingstarted/examples/gallery/auto_examples_processing/filtering/images/sphx_glr_plot_filter_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 29-31

here `Filter` processor is used to apply a Savitzky-Golay filter to the
spectrum.

.. GENERATED FROM PYTHON SOURCE LINES 31-46

.. code-block:: default


    filter = scp.Filter(
        method="savgol", size=5, order=0
    )  # default is size=5, order=2, deriv=0

    # plot the result
    Xm = filter(X)
    _ = X.plot(color="b", label="original")
    ax = Xm.plot(clear=False, color="r", ls="-", lw=1.5, label="SG filter")
    diff = X - Xm
    s = round(diff.std(dim=-1).values, 2)
    ax = diff.plot(clear=False, ls="-", lw=1, label=f"difference (std={s})")
    ax.legend(loc="best", fontsize=10)
    ax.set_title("Savitzky-Golay filter (size=7, order=2)")




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_processing/filtering/images/sphx_glr_plot_filter_002.png
   :alt: Savitzky-Golay filter (size=7, order=2)
   :srcset: /gettingstarted/examples/gallery/auto_examples_processing/filtering/images/sphx_glr_plot_filter_002.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Text(0.5, 1.0, 'Savitzky-Golay filter (size=7, order=2)')



.. GENERATED FROM PYTHON SOURCE LINES 47-49

As good alternative to the Savitzky-Golay filter want can choose to use the
Whittaker-Eilers smoother

.. GENERATED FROM PYTHON SOURCE LINES 49-61

.. code-block:: default


    filter = scp.Filter(method="whittaker", order=2, lamb=1.5)
    Xm = filter(X)
    # plot the result
    Xm = filter(X)
    _ = X.plot(color="b", label="original")
    ax = Xm.plot(clear=False, color="r", ls="-", lw=1.5, label="WE filter")
    diff = X - Xm
    s = round(diff.std(dim=-1).values, 2)
    ax = diff.plot(clear=False, ls="-", lw=1, label=f"difference (std={s})")
    ax.legend(loc="best", fontsize=10)
    ax.set_title("Whittaker-Eiler filter (order=2, lamb=1.5)")



.. image-sg:: /gettingstarted/examples/gallery/auto_examples_processing/filtering/images/sphx_glr_plot_filter_003.png
   :alt: Whittaker-Eiler filter (order=2, lamb=1.5)
   :srcset: /gettingstarted/examples/gallery/auto_examples_processing/filtering/images/sphx_glr_plot_filter_003.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Text(0.5, 1.0, 'Whittaker-Eiler filter (order=2, lamb=1.5)')




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.651 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_processing_filtering_plot_filter.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_filter.py <plot_filter.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_filter.ipynb <plot_filter.ipynb>`
